# homebrew-new-bot

./: .gitignore  .gitmodules  LICENSE  README.md  feed.db  formula.rss  justfile  post.py  pyproject.toml
.github/actions/new-packages/: action.yml
.github/workflows/: capture-formulas.yml  capture-json-api.yml  code-quality.yml  generate-rss.yml  ingest-json-api.yml  lint-and-format.yml  new-casks.yml  new-formula.yml  post-new-cask.yml  post-new-formula.yml  post.yml  status-page.yml  typecheck-lint-format.yml
homebrew_new_bot/: post_new_cask.py  utils.py
src/homebrew_new_bot/: __init__.py  cli.py  enums.py  generate.py  generate_rss.py  ingest.py  ingest_json_api.py  post_new_formula.py  utils.py
src/homebrew_new_bot/commands/: api.py  database.py  outputs.py
state/: cursor  status.html.j2
state/cask/: template.j2  template.txt
state/formula/: cursor.txt  template.j2  template.txt
terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfvars.example
