[project]
name = "homebrew-new-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Vince Cima", email = "contact@vincecima.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlite-utils>=3.37",
]

[project.scripts]
homebrew-new-bot = "homebrew_new_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
