[project]
name = "homebrew-new-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Vince Cima", email = "contact@vincecima.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "jinja2>=3.1.4",
    "mastodon-py>=1.8.1",
    "requests>=2.32.3",
    "sqlite-utils>=3.37",
]

[project.scripts]
homebrew-new-bot = "homebrew_new_bot:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.4",
    "types-requests>=2.32.0.20241016",
]
